--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Cherry+Swash');
+@font-face {
+    font-family: helveticaLT, serif;
+    src: url(../fonts/helvetica-lt-std-condensed-58c79604c02ca.otf);
+}
+@font-face {
+    font-family: MyriadPro, serif;
+    src: url(../fonts/MyriadPro.otf);
+}
 .removeradius {
     border-radius: 0px;
     margin-bottom: 0;
@@ -16,7 +24,8 @@
 }
 .myBrand{
     padding-left: 150px;
-    font-family: 'Cherry Swash', 'cursive';
+    font-family: MyriadPro, serif;
+    font-size: 2em;
 }
 .navbar-default {
     background-color: #4c97a3;
@@ -92,7 +101,7 @@
 }
 
 .myText{
-
+    font-family: helveticaLT, serif;
     line-height: 150%;
 }
 .firstSection{
@@ -163,7 +172,6 @@
     background: rgba(0,0,0,0);
 }
 .carousel-inner {
-    /* make sure your .items will get correct height */
     height: 100%;
 }
 
@@ -189,34 +197,20 @@
     color: #ffffff;
     padding-top: 50px;
 }
-/*.myImg{*/
-    /*padding-top: 70px;*/
-/*}*/
-
 .circle-avatar {
-    /*background-image:url(images/dhavan.jpg)*/
     background: url('../images/dhavan.jpg') top center no-repeat;
     max-width: 10%;
     width: 10%;
     height: 10%;
-    /* display: block; */
     padding-top: 100px;
     border-radius: 50%;
-    /* background-position-y: center; */
-    /* background-position-x: center; */
-    /* background-repeat: no-repeat; */
     background-size: cover;
     margin-top: 100px;
-    /*margin: 0 auto;*/
-    /* top: 0; */
-    /* left: 20%; */
-    /* right: 0; */
-    /* bottom: 0; */
-
 }
 
 .testimonial{
     padding-top: 70px;
+    font-family: helveticaLT, serif;
 }
 #map {
     height: 520px;
@@ -251,13 +245,12 @@ footer{
 footer p{
     padding-top: 10px;
     color: #ffffff;
+    font-family: MyriadPro, serif;
 }
 .circleDiv {
     border-radius: 50%;
     background-color: orange;
 }
-
-
 
 @media (max-width: 1348px){
     .firstSection{
@@ -277,6 +270,10 @@ footer p{
     }
     .myText{
         font-size: 0.8em;
+        font-family: helveticaLT, serif;
+    }
+    .fontChange{
+        font-family: helveticaLT, serif;
     }
     .btn-center{
         margin-left:44%;
@@ -296,10 +293,12 @@ footer p{
         padding-right: 20px;
         line-height: 120%;
         font-size: x-large;
+         font-family: helveticaLT, serif;
     }
     .secondSection p{
         padding-top: 0;
         padding-bottom: 15px;
+        font-family: helveticaLT, serif;
     }
     .thirdSection{
         height:80%;
@@ -309,6 +308,7 @@ footer p{
     }
     .thirdSection p{
         padding:30px 15px 30px 15px;
+        font-family: helveticaLT, serif;
     }
     .mapSection, .myChild {
         position: initial;
